--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --config webpack.config.js"
   },
   "author": "Alejandro Hernandez",
   "license": "ISC",
@@ -13,14 +14,16 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "autoprefixer": "^10.3.7",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
+    "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss-loader": "^6.2.0",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
     "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0"
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
