--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.4.0",
-    "cssnano": "^5.0.8",
     "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.4.2",
+    "node-sass": "^6.0.1",
     "postcss-loader": "^6.2.0",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
