--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack serve --config webpack.config.js --mode development"
+    "build": "webpack --config webpack.common.js",
+    "start": "webpack serve --config webpack.common.js --mode development"
   },
   "author": "Alejandro Hernandez",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
