--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --config webpack.prod.js",
-    "start": "webpack serve --config webpack.dev.js --mode development"
+    "build": "webpack --config webpack.common.js",
+    "start": "webpack serve --config webpack.common.js --mode development"
   },
   "author": "Alejandro Hernandez",
   "license": "ISC",
