--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "test",
     "build": "webpack --config webpack.common.js",
-    "start": "webpack serve --config webpack.common.js --mode development"
+    "start": "webpack serve --config webpack.dev.js --mode development"
   },
   "author": "Alejandro Hernandez",
   "license": "ISC",
